--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
         "cmdk": "^1.1.1",
         "d3": "^7.9.0",
         "date-fns": "^3.6.0",
+        "dexie": "^4.2.1",
+        "dexie-react-hooks": "^4.2.0",
         "embla-carousel-react": "^8.5.2",
         "framer-motion": "^12.6.2",
         "input-otp": "^1.4.2",
