Enhance project structure and functionality by adding new features and improving existing components. Introduce a word selection algorithm proposal document, implement a CSV import dialog for word management, and refactor settings and stats screens. Update package.json scripts for improved development workflow and add TypeScript utility functions for adaptive time management. Include new database schema and SRS utilities for enhanced learning experience.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "kill": "fuser -k 5000/tcp",
+        "dev": "bun run dev:server & bun run dev:client",
+        "dev:client": "vite",
+        "dev:server": "bun run --watch server/index.ts",
+        "kill": "fuser -k 5000/tcp 3456/tcp",
         "build": "tsc -b --noCheck && vite build",
         "lint": "eslint .",
         "optimize": "vite optimize",
