--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,37 @@
+# Dependencies
+node_modules/
+
+# Build output
+dist/
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*-dist
-*.local
+# TypeScript
+*.tsbuildinfo
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Database (optional - uncomment if you want to ignore the db)
+# data/*.db
 
-.env
-**/agent-eval-report*
-packages
-pids
-.file-manifest
-.devcontainer/
-
-.spark-workbench-id
+# Scripts output (collected data)
+scripts/output/*.json
+!scripts/output/.gitkeep
