--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
         "dexie-react-hooks": "^4.2.0",
         "embla-carousel-react": "^8.5.2",
         "framer-motion": "^12.6.2",
+        "i18next": "^25.7.2",
+        "i18next-browser-languagedetector": "^8.2.0",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.484.0",
         "marked": "^15.0.7",
@@ -68,6 +70,7 @@
         "react-dom": "^19.2.1",
         "react-error-boundary": "^6.0.0",
         "react-hook-form": "^7.54.2",
+        "react-i18next": "^16.5.0",
         "react-resizable-panels": "^2.1.7",
         "recharts": "^2.15.1",
         "sonner": "^2.0.1",
