--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "dev:client": "vite",
         "dev:server": "bun run --watch server/index.ts",
         "kill": "fuser -k 5000/tcp 3456/tcp",
-        "build": "tsc -b --noCheck && vite build",
+        "build": "vite build",
+        "typecheck": "tsc -b",
         "lint": "eslint .",
         "optimize": "vite optimize",
         "preview": "vite preview"
@@ -85,6 +86,7 @@
     "devDependencies": {
         "@eslint/js": "^9.21.0",
         "@tailwindcss/postcss": "^4.1.8",
+        "@types/node": "^25.0.1",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react-swc": "^4.2.2",
