feat: add initial project documentation and structure
- Create CHANGELOG.md to document notable changes and versioning.
- Add CODE_OF_CONDUCT.md to establish community guidelines for contributors.
- Introduce CONTRIBUTING.md to outline contribution processes and standards.
- Update LICENSE to GNU Affero General Public License v3.0 for open-source compliance.
- Revise README.md to provide an overview of the TypeFlow application, its features, and setup instructions.
- Implement SECURITY.md to detail the security policy and reporting procedures.
- Add Japanese translations for CODE_OF_CONDUCT and CONTRIBUTING documents to support a wider audience.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,31 @@
 {
-    "name": "spark-template",
-    "private": true,
-    "version": "0.0.0",
+    "name": "typeflow",
+    "version": "0.1.0",
+    "description": "Developer Typing Trainer - A lightweight, widget-first typing practice application for developers",
     "type": "module",
+    "private": true,
+    "license": "AGPL-3.0",
+    "author": "Akimasa Sugai",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/otomatty/typeflow.git"
+    },
+    "bugs": {
+        "url": "https://github.com/otomatty/typeflow/issues"
+    },
+    "homepage": "https://github.com/otomatty/typeflow#readme",
+    "keywords": [
+        "typing",
+        "typing-practice",
+        "typing-trainer",
+        "japanese",
+        "romaji",
+        "developer-tools",
+        "react",
+        "typescript"
+    ],
     "scripts": {
-        "dev": "bun run dev:server & bun run dev:client",
-        "dev:client": "vite",
-        "dev:server": "bun run --watch server/index.ts",
-        "kill": "fuser -k 5000/tcp 3456/tcp",
+        "dev": "vite",
         "build": "vite build",
         "typecheck": "tsc -b",
         "lint": "eslint .",
@@ -54,8 +72,6 @@
         "cmdk": "^1.1.1",
         "d3": "^7.9.0",
         "date-fns": "^3.6.0",
-        "dexie": "^4.2.1",
-        "dexie-react-hooks": "^4.2.0",
         "embla-carousel-react": "^8.5.2",
         "framer-motion": "^12.6.2",
         "i18next": "^25.7.2",
