feat: implement Cloudflare Workers and D1 database integration
- Add server-side logic using Hono framework for handling API requests.
- Create database schema and CRUD operations for words and game scores in D1.
- Introduce authentication middleware for future enhancements.
- Update package.json to include necessary dependencies for Cloudflare Workers.
- Add configuration files for deployment and environment settings.
- Implement initial settings and utility functions for managing game state and statistics.
- Enhance user experience with new features for quick start and preset selection.
- Update localization files to support new features and settings.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "DOM",
       "DOM.Iterable"
     ],
-    "types": ["node"],
+    "types": ["node", "@cloudflare/workers-types"],
     "module": "ESNext",
     "skipLibCheck": true,
     "strictNullChecks": true,
