--- a/package.json
+++ b/package.json
@@ -30,7 +30,14 @@
         "typecheck": "tsc -b",
         "lint": "eslint .",
         "optimize": "vite optimize",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "dev:server": "wrangler dev --env development",
+        "deploy": "wrangler deploy",
+        "deploy:prod": "wrangler deploy --env production",
+        "db:migrate": "wrangler d1 migrations apply typeflow-db",
+        "db:migrate:dev": "wrangler d1 migrations apply typeflow-db-dev --env development",
+        "db:create": "wrangler d1 create typeflow-db",
+        "db:create:dev": "wrangler d1 create typeflow-db-dev"
     },
     "dependencies": {
         "@github/spark": ">=0.43.1 <1",
@@ -96,7 +103,8 @@
         "uuid": "^13.0.0",
         "vaul": "^1.1.2",
         "wanakana": "^5.3.1",
-        "zod": "^4.1.13"
+        "zod": "^4.1.13",
+        "hono": "^4.0.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
@@ -112,7 +120,9 @@
         "tailwindcss": "^4.1.11",
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.38.0",
-        "vite": "^7.2.6"
+        "vite": "^7.2.6",
+        "@cloudflare/workers-types": "^4.20241106.0",
+        "wrangler": "^3.0.0"
     },
     "workspaces": {
         "packages": [
