feat: implement CI/CD pipeline and code quality tools
- Add GitHub Actions workflow for CI, including linting, type checking, testing, and building.
- Introduce Vitest for testing with a setup file and initial test cases for utility functions.
- Configure ESLint and Prettier for code quality, including lint-staged for pre-commit checks.
- Create configuration files for ESLint and Prettier, and update package.json scripts accordingly.
- Enhance .gitignore to exclude coverage and output directories.
- Document CI/CD implementation examples and improvements in dedicated markdown files.

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,10 @@ yarn-error.log*
 # TypeScript
 *.tsbuildinfo
 
+# Testing
+coverage/
+.nyc_output/
+
 # Database (optional - uncomment if you want to ignore the db)
 # data/*.db
 
