--- a/package.json
+++ b/package.json
@@ -29,6 +29,13 @@
         "build": "vite build",
         "typecheck": "tsc -b",
         "lint": "eslint .",
+        "format": "prettier --write \"src/**/*.{ts,tsx,json,css,md}\" \"*.{ts,tsx,json,md}\"",
+        "format:check": "prettier --check \"src/**/*.{ts,tsx,json,css,md}\" \"*.{ts,tsx,json,md}\"",
+        "lint-staged": "lint-staged",
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "test:coverage": "vitest --coverage",
+        "test:run": "vitest run",
         "optimize": "vite optimize",
         "preview": "vite preview",
         "dev:server": "wrangler dev --env development",
@@ -37,7 +44,8 @@
         "db:migrate": "wrangler d1 migrations apply typeflow-db",
         "db:migrate:dev": "wrangler d1 migrations apply typeflow-db-dev --env development",
         "db:create": "wrangler d1 create typeflow-db",
-        "db:create:dev": "wrangler d1 create typeflow-db-dev"
+        "db:create:dev": "wrangler d1 create typeflow-db-dev",
+        "prepare": "husky install"
     },
     "dependencies": {
         "@github/spark": ">=0.43.1 <1",
@@ -114,13 +122,24 @@
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react-swc": "^4.2.2",
         "eslint": "^9.28.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
+        "husky": "^9.0.11",
+        "lint-staged": "^15.2.2",
+        "prettier": "^3.2.5",
         "tailwindcss": "^4.1.11",
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.38.0",
         "vite": "^7.2.6",
+        "vitest": "^2.0.5",
+        "@vitest/ui": "^2.0.5",
+        "@vitest/coverage-v8": "^2.0.5",
+        "@testing-library/react": "^16.0.1",
+        "@testing-library/jest-dom": "^6.4.2",
+        "@testing-library/user-event": "^14.5.2",
+        "jsdom": "^24.0.0",
         "@cloudflare/workers-types": "^4.20241106.0",
         "wrangler": "^3.0.0"
     },
