Add Turso database setup, local development docs, and server improvements
- Add Turso database setup and migration documentation
- Add local development and quick start guides
- Add server implementation and database utilities
- Add development scripts (dev, migrate, setup-local-db)
- Update database schema and types
- Improve preset dialog and recommended presets components
- Update i18n translations for stats
- Update configuration files (package.json, tsconfig.json, wrangler.toml)
- Update .gitignore and README
- Fix ESLint errors (unused variables and any types)

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,10 @@ coverage/
 
 # Database (optional - uncomment if you want to ignore the db)
 # data/*.db
+local.db
+*.db
+*.db-shm
+*.db-wal
 
 # Scripts output (collected data)
 scripts/output/*.json
