--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "scripts": {
     "dev": "vite",
+    "dev:all": "bun run scripts/dev.ts",
     "build": "vite build",
     "typecheck": "tsc -b",
     "lint": "eslint .",
@@ -38,19 +39,22 @@
     "test:run": "vitest run",
     "optimize": "vite optimize",
     "preview": "vite preview",
-    "dev:server": "wrangler dev --env development",
-    "deploy": "wrangler deploy",
-    "deploy:prod": "wrangler deploy --env production",
-    "db:migrate": "wrangler d1 migrations apply typeflow-db",
-    "db:migrate:dev": "wrangler d1 migrations apply typeflow-db-dev --env development",
-    "db:create": "wrangler d1 create typeflow-db",
-    "db:create:dev": "wrangler d1 create typeflow-db-dev",
+    "server": "bun run src/server/server.ts",
+    "server:dev": "bun --watch src/server/server.ts",
+    "dev:server": "bun --watch src/server/server.ts",
+    "db:migrate": "bun run scripts/migrate.ts",
+    "db:migrate:local": "bun run scripts/migrate.ts --local",
+    "db:setup": "bun run scripts/setup-local-db.ts",
+    "turso:create": "turso db create typeflow-db",
+    "turso:list": "turso db list",
+    "turso:shell": "turso db shell typeflow-db",
     "prepare": "husky install"
   },
   "dependencies": {
     "@github/spark": ">=0.43.1 <1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
+    "@libsql/client": "^0.15.15",
     "@octokit/core": "^6.1.4",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -89,6 +93,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.6.2",
+    "hono": "^4.0.0",
     "i18next": "^25.7.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
@@ -111,22 +116,29 @@
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "wanakana": "^5.3.1",
-    "zod": "^4.1.13",
-    "hono": "^4.0.0"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241106.0",
     "@eslint/js": "^9.21.0",
+    "bun-types": "latest",
     "@tailwindcss/postcss": "^4.1.8",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^25.0.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^4.2.2",
+    "@vitest/coverage-v8": "^2.0.5",
+    "@vitest/ui": "^2.0.5",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "husky": "^9.0.11",
+    "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "tailwindcss": "^4.1.11",
@@ -134,13 +146,6 @@
     "typescript-eslint": "^8.38.0",
     "vite": "^7.2.6",
     "vitest": "^2.0.5",
-    "@vitest/ui": "^2.0.5",
-    "@vitest/coverage-v8": "^2.0.5",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/user-event": "^14.5.2",
-    "jsdom": "^24.0.0",
-    "@cloudflare/workers-types": "^4.20241106.0",
     "wrangler": "^3.0.0"
   },
   "workspaces": {
