--- a/package.json
+++ b/package.json
@@ -116,7 +116,9 @@
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "wanakana": "^5.3.1",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "@clerk/clerk-react": "^5.0.0",
+    "@clerk/backend": "^1.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241106.0",
