feat: Add .env.example file and update deployment scripts
- Introduced a new .env.example file to provide a template for environment variable configuration.
- Updated .gitignore to exclude .env.production files.
- Added deployment scripts for production and development environments in package.json.
- Enhanced deployment documentation in DEPLOYMENT_SETUP.md with detailed instructions for setting up environment variables and using Turso CLI.

--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "turso:create": "turso db create typeflow-db",
     "turso:list": "turso db list",
     "turso:shell": "turso db shell typeflow-db",
+    "deploy": "bunx wrangler deploy --env production",
+    "deploy:dev": "bunx wrangler deploy --env development",
     "prepare": "husky install"
   },
   "dependencies": {
