--- a/wrangler.toml
+++ b/wrangler.toml
@@ -15,11 +15,16 @@ compatibility_date = "2024-11-06"
 dev = { port = 3456 }
 
 # 本番環境の環境変数設定
-# デプロイ前に以下の値を設定してください
-[env.production.vars]
-# TURSO_DATABASE_URL = "libsql://your-database.turso.io"
-# TURSO_AUTH_TOKEN = "your-auth-token"
-# ALLOWED_ORIGINS = "https://your-app.pages.dev"
+# 環境変数はCloudflare Dashboardで設定してください
+# Cloudflare Dashboard → Workers & Pages → typeflow-api → Settings → Variables
+# 必要な環境変数:
+# - TURSO_DATABASE_URL
+# - TURSO_AUTH_TOKEN
+# - CLERK_SECRET_KEY
+# - ALLOWED_ORIGINS (オプション)
+# 
+# 注意: [env.production.vars]セクションを削除することで、
+# Cloudflare Dashboardで設定した環境変数が使用されます
 
 # 開発環境の環境変数設定
 [env.development.vars]
