chore: Simplify deployment command and add troubleshooting documentation for duplicate Workers
- Updated the deployment command in `package.json` to remove the explicit environment specification for production.
- Added a new documentation file `DUPLICATE_WORKERS_FIX.md` outlining the issue of duplicate Workers in Cloudflare and providing a step-by-step guide for resolution and best practices for future deployments.

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "turso:create": "turso db create typeflow-db",
     "turso:list": "turso db list",
     "turso:shell": "turso db shell typeflow-db",
-    "deploy": "bunx wrangler deploy --env production",
+    "deploy": "bunx wrangler deploy",
     "deploy:dev": "bunx wrangler deploy --env development",
     "prepare": "husky install"
   },
