chore: Update project configuration and deployment settings
- Changed project name from "spark-template" to "typeflow" in `bun.lock`.
- Added a new deployment command for Cloudflare Pages in `package.json`.
- Updated `tsconfig.json` to exclude the `src/server` directory from the build.
- Modified `vite.config.ts` to use the root path for Cloudflare Pages and added build optimization settings.
- Enhanced `wrangler.toml` comments to clarify the separation of backend and frontend deployment processes.
- Improved deployment workflow documentation in `.github/workflows/deploy.yml` to specify the use of separate jobs for Workers and Pages.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "turso:shell": "turso db shell typeflow-db",
     "deploy": "bunx wrangler deploy",
     "deploy:dev": "bunx wrangler deploy --env development",
+    "deploy:pages": "bun run build && bunx wrangler pages deploy dist --project-name=typeflow",
     "prepare": "husky install"
   },
   "dependencies": {
