--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ concurrency:
 
 jobs:
   # バックエンド（Cloudflare Workers）のデプロイ
+  # ⚠️ 重要: このジョブは wrangler.toml を使用してWorkersにデプロイします
+  # フロントエンドは deploy-pages ジョブで別途デプロイされます
   deploy-workers:
     name: Deploy to Cloudflare Workers
     runs-on: ubuntu-latest
@@ -33,6 +35,8 @@ jobs:
       - name: Run type check
         run: bun run typecheck
 
+      # wrangler.toml を使用してWorkersにデプロイ（バックエンドAPIのみ）
+      # フロントエンドは deploy-pages ジョブでデプロイされます
       - name: Deploy to Cloudflare Workers
         run: bunx wrangler deploy
         env:
@@ -83,6 +87,8 @@ jobs:
           # ヘルスチェック失敗でもデプロイは続行（警告のみ）
 
   # フロントエンド（Cloudflare Pages）のデプロイ
+  # ⚠️ 重要: このジョブは cloudflare/pages-action を使用してPagesにデプロイします
+  # wrangler.toml は使用しません（Workers用の設定ファイルです）
   deploy-pages:
     name: Deploy to Cloudflare Pages
     runs-on: ubuntu-latest
@@ -105,6 +111,8 @@ jobs:
           NODE_ENV: production
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
 
+      # cloudflare/pages-action を使用してPagesにデプロイ（フロントエンドのみ）
+      # wrangler.toml は使用しません
       - name: Deploy to Cloudflare Pages
         uses: cloudflare/pages-action@v1
         with:
