--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "vite.config.ts", "vite-env.d.ts"]
+  "include": ["src", "vite.config.ts", "vite-env.d.ts"],
+  "exclude": ["src/server"]
 }
