feat: Add preset management scripts and enhance preset data handling
- Introduced a new `preset-manager.ts` script for managing preset data, including finding and fixing romaji issues, and exporting/importing presets to/from JSON.
- Added several new preset JSON files for advanced sentences, basic Japanese, programming terms, and a comprehensive sushi typing challenge.
- Updated `package.json` with new script commands for preset management.
- Created a `turso-query.sh` script for executing common database queries related to presets and words.
- Enhanced the database update functionality to allow updates to text, reading, and romaji fields in the words table.

--- a/package.json
+++ b/package.json
@@ -48,6 +48,14 @@
     "turso:create": "turso db create typeflow-db",
     "turso:list": "turso db list",
     "turso:shell": "turso db shell typeflow-db",
+    "preset:find": "bun run scripts/preset-manager.ts find",
+    "preset:find:local": "bun run scripts/preset-manager.ts find --local",
+    "preset:fix": "bun run scripts/preset-manager.ts fix",
+    "preset:fix:local": "bun run scripts/preset-manager.ts fix --local",
+    "preset:export": "bun run scripts/preset-manager.ts export",
+    "preset:export:local": "bun run scripts/preset-manager.ts export --local",
+    "preset:import": "bun run scripts/preset-manager.ts import",
+    "preset:import:local": "bun run scripts/preset-manager.ts import --local",
     "deploy": "bunx wrangler deploy",
     "deploy:dev": "bunx wrangler deploy --env development",
     "deploy:pages": "bun run build && bunx wrangler pages deploy dist --project-name=typeflow",
