--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "dev": "vite",
     "dev:all": "bun run scripts/dev.ts",
     "build": "vite build",
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
+    "tauri:icon": "tauri icon",
     "typecheck": "tsc -b",
     "lint": "eslint .",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,css,md}\" \"*.{ts,tsx,json,md}\"",
@@ -62,6 +66,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@clerk/backend": "^1.0.0",
+    "@clerk/clerk-react": "^5.0.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@libsql/client": "^0.15.15",
@@ -96,6 +102,7 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.90.12",
+    "@tauri-apps/api": "^2.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -126,14 +133,13 @@
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "wanakana": "^5.3.1",
-    "zod": "^4.1.13",
-    "@clerk/clerk-react": "^5.0.0",
-    "@clerk/backend": "^1.0.0"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241106.0",
     "@eslint/js": "^9.21.0",
     "@tailwindcss/postcss": "^4.1.8",
+    "@tauri-apps/cli": "^2.9.6",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
