feat: Introduce CLI practice mode for typing exercises
- Added a new CLI practice mode allowing users to practice typing directly in the terminal with various display modes (minimal, log, test, build, git).
- Implemented a game engine to manage the typing practice flow, including input handling, scoring, and statistics.
- Created a local database client for managing words and scores without server dependency.
- Enhanced documentation to include usage instructions and options for the new CLI practice feature.
- Updated package.json with new CLI commands for starting practice sessions.

--- a/package.json
+++ b/package.json
@@ -60,6 +60,11 @@
     "preset:export:local": "bun run scripts/preset-manager.ts export --local",
     "preset:import": "bun run scripts/preset-manager.ts import",
     "preset:import:local": "bun run scripts/preset-manager.ts import --local",
+    "cli:practice": "bun run scripts/cli-practice.ts",
+    "cli:practice:log": "bun run scripts/cli-practice.ts --mode=log",
+    "cli:practice:test": "bun run scripts/cli-practice.ts --mode=test",
+    "cli:practice:build": "bun run scripts/cli-practice.ts --mode=build",
+    "cli:practice:git": "bun run scripts/cli-practice.ts --mode=git",
     "deploy": "bunx wrangler deploy",
     "deploy:dev": "bunx wrangler deploy --env development",
     "deploy:pages": "bun run build && bunx wrangler pages deploy dist --project-name=typeflow",
